--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,23 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Grants"
+    url: /grants/
+
+  - title: "Patent/Software"
+    url: /patent/
+
+  - title: "Professional Services"
+    url: /professional/
+
+  - title: "Honors/Awards"
+    url: /awards/
 
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: /teaching/
+
+  - title: "Group/Students"
+    url: /group/
+
+  - title: "Talks"
+    url: /talks/
