--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jiang Xiao"
+title                    : "Jiang Xiao.jpeg"
 title_separator          : "-"
 name                     : &name "Dr Xiao"
 description              : &description "personal description"
