--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jiang Xiao"
-  avatar           : "Jiang Xiao.jpeg"
+  avatar           : "Jiang.JPG"
   bio              : "Associate Professor, Huazhong University of Science and Technology"
   location         : "Wuhan, China"
   employer         :
