--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Jiang Xiao"
 title_separator          : "-"
 name                     : &name "Dr Xiao"
 description              : &description "personal description"
-url                      : https://iamosu111.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://JXIAO-HUST.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "iamosu111/iamosu111.github.io"
+repository               : "JXIAO-HUST/JXIAO-HUST.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
