--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jiang Xiao"
   avatar           : "profile.png"
-  bio              : "Associate Professor, Huazhong University of Science and Technology"
+  bio              : "Associate Professor,School of Computer Science and Technology,Huazhong University of Science and Technology"
   location         : "Wuhan, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "JXIAO-HUST"
   google_plus      :
   keybase          :
   instagram        :
