--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jiang Xiao"
-  avatar           : "jiang.jpeg"
+  avatar           : "jiang.JPG"
   bio              : "Associate Professor,School of Computer Science and Technology,Huazhong University of Science and Technology"
   location         : "Wuhan, China"
   employer         :
