--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jiang Xiao"
   avatar           : "jiang1.JPG"
-  bio              : "Associate Professor,School of Computer Science and Technology,Huazhong University of Science and Technology"
+  bio              : "Professor,School of Computer Science and Technology,Huazhong University of Science and Technology"
   location         : "Wuhan, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
